# ppatch

./: Cargo.toml  README.md
src/: lib.rs  masked_byte.rs  opt_fifo.rs  pattern.rs  pattern_replace_iterator.rs  pattern_replace_result_iterator.rs  pattern_search_iterator.rs  pattern_search_ref_iterator.rs  pattern_search_result_iterator.rs  pattern_skip_iterator.rs  pattern_skip_result_iterator.rs  pattern_take_iterator.rs  pattern_take_result_iterator.rs  prelude.rs  replacer.rs  searcher.rs  skipper.rs  taker.rs
tests/: test_search_replace.rs
