[package]
name = "ppatch"
version = "0.1.0"
authors = ["Stefan Achatz <erazor_de@users.sourceforge.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/erazor-de/ppatch"
description = """
A library to search/replace binary data via patterns
"""

[dependencies]
num = "0.2"
snafu = "0.6.0"
